--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ CLOUDCONVERT_API_KEY=your_cloudconvert_api_key_here
 # OPTIONAL
 # ============================
 LOG_LEVEL=INFO
+
+SUBTITLE_FONT=Luckiest Guy
+SUBTITLE_FONT_SIZE=10
+SUBTITLE_WORDS_PER_CHUNK=2
