--- a/.env.example
+++ b/.env.example
@@ -25,10 +25,14 @@ HEYGEN_API_KEY=your_heygen_api_key_here
 CLOUDCONVERT_API_KEY=your_cloudconvert_api_key_here
 
 # ============================
+# SUBTITLE CONFIGURATION
+# ============================
+# Available fonts: Bangers, Anton, Bebas Neue, Montserrat, Poppins, Oswald, Pacifico
+SUBTITLE_FONT=Bangers
+SUBTITLE_FONT_SIZE=10
+SUBTITLE_WORDS_PER_CHUNK=2
+
+# ============================
 # OPTIONAL
 # ============================
 LOG_LEVEL=INFO
-
-SUBTITLE_FONT=Luckiest Guy
-SUBTITLE_FONT_SIZE=10
-SUBTITLE_WORDS_PER_CHUNK=2
