--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ CLOUDCONVERT_API_KEY=your_cloudconvert_api_key_here
 # SUBTITLE CONFIGURATION
 # ============================
 # Available fonts: Bangers, Anton, Bebas Neue, Montserrat, Poppins, Oswald, Pacifico
-SUBTITLE_FONT=Bangers
+SSUBTITLE_FONT=Montserrat
 SUBTITLE_FONT_SIZE=10
 SUBTITLE_WORDS_PER_CHUNK=2
 
